--- a/css/home.css
+++ b/css/home.css
@@ -123,7 +123,7 @@
 .product-section_all .product-list_all .product-item .product-item__info h4{
     color: var(--main-text);
     margin: 1.2rem 0;
-    /* text-align: center; */
+
 }
 .product-section_all .product-list_all .product-item__info p {
     margin: 0.5rem 0;
@@ -174,5 +174,8 @@
     }
     .product-section_all .product-list_all .product-item .product-item__img {
         width: 300px;
+    }
+    .product-list_all .product-item:nth-child(odd) .price-line {
+        flex-direction: row-reverse
     }
 }
