--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    padding: 2.5rem 0;
+    padding: 3.5rem 0;
     /* gap: 2rem; */
     justify-content: space-around;
 }
@@ -25,6 +25,7 @@
     max-width: 100%;
     height: auto;
     display: block;
+    object-fit: cover;
 }
 .about-section .about-section__txt{
     max-width: 30rem;
@@ -90,9 +91,10 @@
     justify-content: center;
     align-items: center;
     padding: 1.3rem;
-    margin-bottom: 1.3rem;
+    /* margin-bottom: 1.3rem;
     margin-right: 1.2rem;
-    margin-left: 1.2rem;
+    margin-left: 1.2rem; */
+    margin: 1.3rem 1.2rem;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .product-section_all .product-list_all .product-item:nth-child(odd){
