新增所有商品頁面

--- a/css/contact.css
+++ b/css/contact.css
@@ -65,7 +65,7 @@
   }
 
   .contact-form form button:hover {
-    background-color: #d08d8d;
+    background-color: var(--secondary-color);
   }
 
   .contact-info h2 {
