--- a/css/product.css
+++ b/css/product.css
@@ -23,26 +23,29 @@
     display: grid;
     gap: 2rem;
     /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 2rem 0;
+    justify-items: center;
   }
   
   .product-card {
+    border: 1px solid var(--line-color);
     background-color: #fff;
     border-radius: 1rem;
     overflow: hidden;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     text-align: center;
-    transition: transform 0.2s ease;
+    transition: transform 0.3s ease;
     cursor: pointer;
+    max-width: 300px;
   }
 
   .product-card p{
-    font-size: 1rem;
-    color: #888;
-    /* margin-bottom: 1rem; */
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    font-weight: bold;
   }
   
   .product-card:hover {
@@ -51,7 +54,7 @@
   
   .product-card img {
     width: 100%;
-    height: 200px;
+    height: auto;
     aspect-ratio: 4 / 3;
     object-fit: cover;
     display: block;
@@ -68,14 +71,14 @@
   
   .product-card p {
     font-size: 1rem;
-    color: var(--price-btn);
+    color: var(--main-text);
   }
   .product-card .shop{
     color: var(--shop);
   }
 
   .product-actions {
-    margin-top: 10px;
+    margin-top: 1rem;
     display: flex;
     justify-content: space-between;
     gap: 10px;
@@ -83,15 +86,15 @@
   
   .product-actions .btn {
     flex: 1;
-    padding: 8px;
-    font-size: 14px;
+    padding: 0.8rem 1.2rem;
+    font-size: 1rem;
     font-size: bold;
     font-family: var(--font-sans);
     text-align: center;
     background-color: var(--primary-color);
-    color: white;
+    color: #fff;
     border: none;
-    border-radius: 0 0 4px 4px;
+    border-radius: 0 0 5px 5px;
     text-decoration: none;
     transition: background-color 0.3s ease;
     padding: 10px 20px;
@@ -104,7 +107,7 @@
   
   .product-actions .btn:hover {
     background-color: var(--secondary-color);
-    background-color: #b97985;
+
   }
 
     .btn.add-to-cart {
@@ -123,6 +126,11 @@
   .btn.add-to-cart:hover i {
     transform: rotate(20deg);
   }
+
+  .product-card:hover {
+    transform: translateY(-10px); /* 懸停效果 */
+    box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+}
   
   /* 手機板 針對 400px 寬度處理 */
 @media (max-width: 400px) {
@@ -144,3 +152,11 @@
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 }
+
+/* 平板 */
+@media (max-width: 1024px) {
+    .product-grid {
+      grid-template-columns: repeat(3, 1fr);
+      padding: 2rem;
+    }
+  }
