--- a/css/product.css
+++ b/css/product.css
@@ -156,7 +156,7 @@
 /* 平板 */
 @media (max-width: 1024px) {
     .product-grid {
-      grid-template-columns: repeat(3, 1fr);
+      /* grid-template-columns: repeat(3, 1fr); */
       padding: 2rem;
     }
   }
