--- a/css/product-popup.css
+++ b/css/product-popup.css
@@ -13,6 +13,7 @@
     padding-top: 60px;
     padding: 40px 20px;
     transition: all 0.3s ease; /* 讓顯示和隱藏有平滑的過渡效果 */
+    overflow-y: auto;
   }
   
   /* 顯示 */
@@ -27,12 +28,16 @@
     padding: 2rem;
     border: 1px solid #888;
     width: 90%;
-    max-width: 900px; /* 最大寬度 */
+    max-width: 90vw; /* 最大寬度 */
     border-radius: 1rem;
     display: flex;
-    overflow-y: auto;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
     position: relative; /*按鈕 */
+    gap: 2rem;
+
+    max-height: 90vh; /* 設定最大高度，不超過視窗 */
+    overflow-y: auto; /* 超出範圍時出現滾動條 */
+
   }
     /* 關閉樣式 */
   .close {    
@@ -139,8 +144,10 @@
   .quantity-display {
     font-size: 1.5rem;
     margin: 0 1rem;
-    transition: all 0.3s ease;
-    opacity: 1;
+    /* border: none; */
+    /* padding: 0.5rem 1rem; */
+    /* font-size: 1.2rem; */
+    /* cursor: pointer; */
 }
 
 /* 按鈕動態 */
@@ -161,15 +168,17 @@
     margin-bottom: 1rem;
 }
   
-  @media (min-width: 768px) {
+  @media (max-width: 768px) {
     .modal-content {
-      flex-direction: row;
-      gap: 2rem;
+      width: 95%;
+      display: flex;
+      flex-direction: column;
+      /* gap: 0; */
     }
-  
-    .modal-left,
-    .modal-right {
-      width: 50%;
+    .close{
+      top: 0.25rem;
+      right: 0.4rem;
     }
+
   }
   
