--- a/css/index.css
+++ b/css/index.css
@@ -1,195 +1,210 @@
 @import 'share.css';
 
-.about-section,.product-section,.product-section_all{
-    margin: 0 2.3rem;
+.about-section,
+.product-section,
+.product-section_all {
+  margin: 0 2.3rem;
 }
 
-.product-section,.product-section_all,footer{
-    margin-top:3rem;
+.product-section,
+.product-section_all,
+footer {
+  margin-top: 3rem;
 }
 /* 第一部份 -關於我們 */
-.about-section{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 3.5rem 0;
-    /* gap: 2rem; */
-    justify-content: space-around;
+.about-section {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 3.5rem 0;
+  /* gap: 2rem; */
+  justify-content: space-around;
 }
-.about-section .about-section__img{
-    max-width: 50vw;
-    padding: 0;
-    margin: 0;
+.about-section .about-section__img {
+  max-width: 50vw;
+  padding: 0;
+  margin: 0;
 }
-.about-section .about-section__img img{
-    max-width: 100%;
-    height: auto;
-    display: block;
-    object-fit: cover;
+.about-section .about-section__img img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
 }
-.about-section .about-section__txt{
-    max-width: 30rem;
+.about-section .about-section__txt {
+  max-width: 30rem;
 }
-.about-section .about-section__txt h1{
-    text-align: center;
+.about-section .about-section__txt h1 {
+  text-align: center;
 }
 
 /* 第二部分 - 精選商品 */
 
-.product-section .product-section__title{
-    text-align: center;
+.product-section .product-section__title {
+  text-align: center;
 }
-.product-section .product-section__subtitle{
-    margin: 2rem 0;
+.product-section .product-section__subtitle {
+  margin: 2rem 0;
 }
-.product-section .product-list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; /* 原本是 space-evenly，手機會很擠 */
-    gap: 1.5rem;
+.product-section .product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* 原本是 space-evenly，手機會很擠 */
+  gap: 1.5rem;
 }
-.product-section .product-list .product-item{
-    flex: 1 1 clamp(150px, 30%, 200px);
+.product-section .product-list .product-item {
+  flex: 1 1 clamp(150px, 30%, 200px);
+  cursor: pointer;
 }
-.product-section .product-list .product-item .product-item__img{
-    padding: 0;
-    margin: 0 auto;
-    max-width: 6.3rem;;
+.product-section .product-list .product-item .product-item__img {
+  padding: 0;
+  margin: 0 auto;
+  max-width: 6.3rem;
 }
-.product-section .product-list .product-item .product-item__img img{
-    max-width: 100%;
-    height: auto;
-    border-radius: 50%;
-    object-fit: cover;
-    aspect-ratio: 1 / 1;
-    border: 2px solid #c5cbb7; /*圖片線框 */
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    transition: transform 0.3s ease, border-radius 0.3s ease;
+.product-section .product-list .product-item .product-item__img img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%;
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
+  border: 2px solid #c5cbb7; /*圖片線框 */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, border-radius 0.3s ease;
 }
-.product-section .product-list .product-item:hover .product-item__img img{
-    transform: scale(1.05);
-    border-radius: 1rem;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
+.product-section .product-list .product-item:hover .product-item__img img {
+  transform: scale(1.05);
+  border-radius: 1rem;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
 }
-.product-section .product-list .product-item .product-item__info{
-    text-align: center;
+.product-section .product-list .product-item .product-item__info {
+  text-align: center;
 }
 .product-section .product-list .product-item .product-item__info span {
-    display: block;
-    margin-top: 0.5rem;
-    color: var(--title-text);
-    font-weight: bold;
+  display: block;
+  margin-top: 0.5rem;
+  color: var(--title-text);
+  font-weight: bold;
 }
 
 /* 第二部分 - 所有商品 */
-.product-section_all .product-section__subtitle{
-    margin: 2rem 0;
+.product-section_all .product-section__subtitle {
+  margin: 2rem 0;
 }
-.product-section_all .product-list_all .product-item{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 1.3rem;
-    /* margin-bottom: 1.3rem;
+.product-section_all .product-list_all .product-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 1.3rem;
+  /* margin-bottom: 1.3rem;
     margin-right: 1.2rem;
     margin-left: 1.2rem; */
-    margin: 1.3rem 1.2rem;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin: 1.3rem 1.2rem;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
 }
-.product-section_all .product-list_all .product-item:nth-child(odd){
-    flex-direction: row-reverse;
-    text-align: left;
+.product-section_all .product-list_all .product-item:nth-child(odd) {
+  flex-direction: row-reverse;
+  text-align: left;
 }
 .product-section_all .product-list_all .product-item .product-item__img {
-    padding: 0;
-    margin: 0;
-    width: 30vw;
-    border-radius: 1.5rem;
-    overflow: hidden;
+  padding: 0;
+  margin: 0;
+  width: 30vw;
+  border-radius: 1.5rem;
+  overflow: hidden;
 }
-.product-section_all .product-list_all .product-item .product-item__img img{
-    max-width: 100%;
-    height: auto;
-    display: block;
-    aspect-ratio: 1/1;
-    object-fit: cover;
-    border: 2px solid #c5cbb7;
-}
-
-.product-section_all .product-list_all .product-item .product-item__info{
-    max-width: 30rem;
-    margin: auto;
+.product-section_all .product-list_all .product-item .product-item__img img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  border: 2px solid #c5cbb7;
 }
 
-.product-section_all .product-list_all .product-item .product-item__info h4{
-    color: var(--main-text);
-    margin: 1.2rem 0;
+.product-section_all .product-list_all .product-item .product-item__info {
+  max-width: 30rem;
+  margin: auto;
+}
 
+.product-section_all .product-list_all .product-item .product-item__info h4 {
+  color: var(--main-text);
+  margin: 1.2rem 0;
 }
 .product-section_all .product-list_all .product-item__info p {
-    margin: 0.5rem 0;
+  margin: 0.5rem 0;
 }
-.product-section_all .product-list_all .product-item:nth-child(odd) .product-item__info p {
-    text-align: left;
+.product-section_all
+  .product-list_all
+  .product-item:nth-child(odd)
+  .product-item__info
+  p {
+  text-align: left;
 }
-.product-section_all .product-list_all .product-item:nth-child(even) .product-item__info .price-line {
-    text-align: right;
+.product-section_all
+  .product-list_all
+  .product-item:nth-child(even)
+  .product-item__info
+  .price-line {
+  text-align: right;
 }
-.product-section_all .product-list_all .product-item .product-item__info span{
-    color: var(--title-text);
+.product-section_all .product-list_all .product-item .product-item__info span {
+  color: var(--title-text);
 }
-
 
 .price-line {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1rem;
-    font-weight: bold;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  font-weight: bold;
+}
 
-  /* 價格線 */
-  .price-line .line {
-    width: 100%;
-    flex-grow: 1; /* 讓線填滿空間 */
-    height: 1px;
-    background-color: var(--line-color);
-    margin: 0 1rem;
-    min-width: 5rem;  /* 最小寬度 */
-  }
+/* 價格線 */
+.price-line .line {
+  width: 100%;
+  flex-grow: 1; /* 讓線填滿空間 */
+  height: 1px;
+  background-color: var(--line-color);
+  margin: 0 1rem;
+  min-width: 5rem; /* 最小寬度 */
+}
 
-  .product-section_all .product-list_all .product-item:nth-child(even) .price-line {
-    flex-direction: row-reverse; /* 交換價格與線的位置 */
+.product-section_all
+  .product-list_all
+  .product-item:nth-child(even)
+  .price-line {
+  flex-direction: row-reverse; /* 交換價格與線的位置 */
 }
 
 .product-section_all .product-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+  transform: translateY(-5px);
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
 }
 
 /* 手機板 針對 400px 寬度處理 */
 @media (max-width: 400px) {
-    .product-section .product-list {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr); /* 每行兩個商品 */
-    }
-    .price-line .line{
-        margin-left: 0;
-        margin-right: 1rem;
-    }
+  .product-section .product-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 每行兩個商品 */
+  }
+  .price-line .line {
+    margin-left: 0;
+    margin-right: 1rem;
+  }
 }
 
 /* 手機板 */
 
-@media (max-width: 768px){
-    .about-section .about-section__img{
-        max-width: 100%;
-    }
-    .product-section_all .product-list_all .product-item .product-item__img {
-        width: 300px;
-    }
-    .product-list_all .product-item:nth-child(odd) .price-line {
-        flex-direction: row-reverse
-    }
+@media (max-width: 768px) {
+  .about-section .about-section__img {
+    max-width: 100%;
+  }
+  .product-section_all .product-list_all .product-item .product-item__img {
+    width: 300px;
+  }
+  .product-list_all .product-item:nth-child(odd) .price-line {
+    flex-direction: row-reverse;
+  }
 }
