--- a/css/share.css
+++ b/css/share.css
@@ -178,6 +178,10 @@ p {
   text-decoration: none;
   color: inherit; /* 文字顏色繼承 */
 }
+.navbar__logo a p {
+  letter-spacing: 0.5rem;
+  font-family: 'Noto Sans TC';
+}
 
 .navbar__toggle span {
   display: block;
