--- a/css/share.css
+++ b/css/share.css
@@ -170,20 +170,10 @@ p {
   cursor: pointer;
   z-index: 1100;
 }
-.navbar__logo a {
-  display: flex;
-  align-content: center;
-  align-items: center;
-  gap: 14px;
-  text-decoration: none;
-  color: inherit; /* 文字顏色繼承 */
-}
+
 .navbar__logo img {
   width: 100%;
-}
-.navbar__logo a p {
-  letter-spacing: 0.5rem;
-  font-family: 'Noto Sans TC';
+  display: block;
 }
 
 .navbar__toggle span {
@@ -252,7 +242,7 @@ p {
     display: block;
     padding-top: 0.2rem;
   }
-  .navbar__logo a {
-    width: 100%;
+  .navbar__logo .logo {
+    width: 70%;
   }
 }
