--- a/css/share.css
+++ b/css/share.css
@@ -201,10 +201,9 @@ p {
 /* 響應式 RWD */
 @media (max-width: 768px) {
   .navbar {
-    position: sticky;
+    position: fixed;
     padding: 0.5rem 1rem;
     background-color: #f5f5f5;
-    position: relative;
   }
 
   .navbar__logo .logo {
@@ -259,7 +258,7 @@ p {
 
   .navbar__links {
     will-change: transform, opacity; /* 預告瀏覽器，避免nav顫動 */
-    position: absolute;
+    position: fixed;
     top: 100%;
     right: 0;
     left: 0;
@@ -270,7 +269,7 @@ p {
     padding: 1rem 2rem;
     width: 100%;
 
-    transform: translateY(-20px); /* 初始位置 */
+    transform: translateY(-10%); /* 初始位置 */
     opacity: 0;
     pointer-events: none;
     transition: transform 0.3s ease-out, opacity 0.3s ease-out;
@@ -280,5 +279,6 @@ p {
     pointer-events: auto;
     opacity: 1;
     transform: translateY(0);
+    box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.08); /*增加立體感 */
   }
 }
