微調手機板

--- a/css/product.css
+++ b/css/product.css
@@ -145,6 +145,9 @@
 /* 手機板 */
 
 @media (max-width: 768px) {
+  .product-page {
+    padding: 4.5rem 0;
+  }
   .search-filter {
     margin: 2rem;
   }
