--- a/css/contact.css
+++ b/css/contact.css
@@ -101,6 +101,9 @@ p.description {
 }
 
 @media (max-width: 768px) {
+  .container {
+    padding: 5.5rem 1.3rem;
+  }
   .contact-section {
     flex-direction: column;
   }
