--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,8 @@
   padding: 14rem 0;
   text-align: center;
   overflow: hidden;
+  width: 100%;
+  height: 700px;
 }
 .intro-txt {
   max-width: 800px;
@@ -27,7 +29,8 @@
 .intro-svg {
   position: absolute;
   bottom: 0;
-  right: 35%;
+  left: 50%;
+  transform: translateX(-184px); /* 根據實際位置微調樹枝向右或左的偏移量 */
   pointer-events: none; /* 這樣不會擋到按鈕或其他互動 */
   z-index: -1; /* 避免蓋到主內容，可根據實際調整 */
   opacity: 0.8;
@@ -44,24 +47,27 @@
 
 .core-svg {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  top: -1px; /* 讓它緊貼 section1 的底部，可微調 */
+  left: 50%;
+  transform: translateX(-762px); /* 根據 intro-svg 對應方向反向微調 */
   pointer-events: none; /* 這樣不會擋到按鈕或其他互動 */
   z-index: -1; /* 避免蓋到主內容，可根據實際調整 */
   opacity: 0.8;
 }
 .leaves1-svg {
   position: absolute;
-  top: 20%;
-  right: 20%;
+  left: 80%;
+  top: 0;
+  transform: translateY(80px);
   pointer-events: none; /* 這樣不會擋到按鈕或其他互動 */
   z-index: -1; /* 避免蓋到主內容，可根據實際調整 */
   opacity: 0.8;
 }
 .leaves2-svg {
   position: absolute;
-  top: 80%;
-  right: 20%;
+  left: 70%;
+  top: 0;
+  transform: translateY(500px);
   pointer-events: none; /* 這樣不會擋到按鈕或其他互動 */
   z-index: -1; /* 避免蓋到主內容，可根據實際調整 */
   opacity: 0.8;
