--- a/css/about.css
+++ b/css/about.css
@@ -3,7 +3,7 @@
 /* --Section 1 - 敘述  --*/
 .intro {
   position: relative;
-  padding: 14rem 0;
+  padding: 10rem 0;
   text-align: center;
   overflow: hidden;
   width: 100%;
@@ -13,12 +13,15 @@
   max-width: 800px;
   margin: auto;
   padding: 0 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .intro-txt h2 {
   margin-bottom: 30px;
   letter-spacing: 0.5rem;
   font-weight: 500;
+  margin-left: 1rem;
 }
 
 .intro-txt h2 span {
@@ -32,7 +35,12 @@
   line-height: 1.8;
   letter-spacing: 0.2rem;
   display: inline-block;
-  margin-bottom: 1.5em;
+  /* letter-spacing: 0.4rem; */
+  margin-bottom: 1rem;
+}
+
+.intro-txt p:nth-of-type(3) {
+  margin-bottom: 2.5rem;
 }
 
 .intro-txt p span {
