--- a/css/about.css
+++ b/css/about.css
@@ -3,25 +3,32 @@
 /* --Section 1 - 敘述  --*/
 .intro {
   position: relative;
-  padding: 10rem 0;
+  padding: 9.25rem 7.5rem;
   text-align: center;
   overflow: hidden;
   width: 100%;
   height: 700px;
 }
 .intro-txt {
-  max-width: 800px;
+  /* max-width: 800px; */
   margin: auto;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   display: flex;
   flex-direction: column;
 }
 
 .intro-txt h2 {
-  margin-bottom: 30px;
+  font-family: 'Noto Serif TC', serif;
+  font-weight: 700;
+  font-size: 2.25rem;
+  line-height: 1.4;
   letter-spacing: 0.5rem;
-  font-weight: 500;
+
+  margin-bottom: 30px;
   margin-left: 1rem;
+
+  text-align: center;
+  max-width: 60ch; /* 限制段落寬度，避免太寬 */
 }
 
 .intro-txt h2 span {
@@ -70,6 +77,7 @@
   width: 100%;
   height: 700px;
   overflow: hidden;
+  padding: 5rem 7.5rem;
 }
 
 .core-svg {
@@ -105,11 +113,15 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  padding-top: 6rem;
 }
 .core-container h2 {
   letter-spacing: 0.5rem;
-  font-weight: 500;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.4;
+  margin-bottom: 24px;
+  text-align: center;
+  font-family: 'Noto Serif JP', serif;
 }
 
 .center-logo {
@@ -118,15 +130,23 @@
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
+  width: 12vw;
+}
+
+.center-logo img {
+  width: 100%;
+  display: block;
 }
 
 .value {
   position: absolute;
   text-align: center;
-  background-color: rgba(214, 186, 138, 0.5);
+  /* background-color: rgba(214, 186, 138, 0.5); */
+  background-color: #efe7e2;
   border-radius: 50%;
   width: 130px;
   height: 130px;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -141,6 +161,8 @@
   text-align: center;
   color: #b8877d;
   letter-spacing: 0.2rem;
+  font-weight: 500;
+  line-height: 1.2;
 }
 .value span {
   font-size: 13px;
@@ -148,15 +170,15 @@
 }
 /* 三個點的位置需根據實際畫面微調 */
 #value-artistry {
-  top: 35%;
+  top: 40%;
   left: 30%;
 }
 #value-sincerity {
-  top: 35%;
+  top: 40%;
   left: 70%;
 }
 #value-heart {
-  top: 75%;
+  top: 90%;
   left: 50%;
 }
 
@@ -169,4 +191,53 @@
   box-shadow: 0 0 20px rgba(233, 215, 187, 0.7);
   z-index: 3;
   pointer-events: none;
+}
+
+@media (max-width: 768px) {
+  .intro {
+    padding: 9.25rem 1.5rem;
+  }
+  .intro-txt h2 {
+    font-size: 1.75rem;
+  }
+
+  .core-values {
+    padding: 5rem 1.5rem;
+  }
+
+  .core-container h2 {
+  }
+
+  .value {
+    width: 100px;
+    height: 100px;
+  }
+
+  .value p {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: center;
+  }
+  .value span {
+    font-size: 13px;
+  }
+
+  .center-logo {
+    width: 60vw;
+  }
+
+  /* 三個點的位置需根據實際畫面微調 */
+  #value-artistry {
+    top: 90%;
+    left: 25%;
+  }
+  #value-sincerity {
+    top: 90%;
+    left: 75%;
+  }
+  #value-heart {
+    top: 90%;
+    left: 50%;
+  }
 }
