--- a/css/contact.css
+++ b/css/contact.css
@@ -6,18 +6,24 @@
   padding: 60px 20px;
 }
 
-h1 {
-  text-align: center;
-  font-size: 2rem;
-  color: #8f5a5a;
+.container h4 {
+  font-size: 2.5rem;
+  color: var(--main-text);
+  margin-bottom: 50px;
+  font-weight: 700;
+}
+
+.container h1 {
+  font-size: 1.5rem;
+  color: var(--main-text);
   margin-bottom: 10px;
 }
 
 p.description {
   text-align: center;
   font-size: 1rem;
-  margin-bottom: 40px;
-  color: #6d5c56;
+  margin-bottom: 50px;
+  color: var(--price-btn);
 }
 
 .contact-section {
